# TP2023-igra

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  animal.cpp  animal.hpp  button.hpp  farm.cpp  farm.hpp  field.hpp  game.cpp  game.hpp  legacy_snail.hpp  main.cpp  main_menu.h  main_menu.hpp  market.cpp  market.hpp  menu2.cpp  menu2.hpp  names_for_animals.txt  note.txt  player.hpp  random.cpp  resources.cpp  resources.hpp  run.sh  saving_system.cpp  saving_system.hpp  test.cpp  trade.hpp
data/texture/: hen0.png~
output/: test
uml/: ref.txt  юмээль.html
